next/next-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: week6-next
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      nodePort: 31000
  selector:
    app: week6-next
