next/next-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: week6-next
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: my-application.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: week6-next
                port:
                  number: 8080
